# cutlines

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.github/workflows/: pull_request.yml
include/cutlines/: cutlines.h
src/: cutlines.cpp
